test/apps/errors/__sapper__/build/client/enhance-your-calm.79d6f152.js
import { S as SvelteComponent, i as init, s as safe_not_equal, n as noop } from './chunk.e83f0b4f.js';

/* test/apps/errors/src/routes/enhance-your-calm.svelte generated by Svelte v3.6.9 */

function create_fragment(ctx) {
	return {
		c: noop,
		l: noop,
		m: noop,
		p: noop,
		i: noop,
		o: noop,
		d: noop
	};
}

function preload() {
	this.error(420, 'Enhance your calm');
}

class Enhance_your_calm extends SvelteComponent {
	constructor(options) {
		super();
		init(this, options, null, create_fragment, safe_not_equal, []);
	}
}

export default Enhance_your_calm;
export { preload };
